--- a/pirate.html
+++ b/pirate.html
@@ -1,94 +1,190 @@
 <!DOCTYPE html>
-<html> <head>
+<html>
+<head>
     <title>Assignment7</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
-      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script> 
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous">
+    </script>
     <style>
-    .flex-container {
-      display: flex;  flex-direction:row;
-      background-color: rgb(146, 176, 196);
-  }
+        .flex-container {
+            display: flex;
+            flex-direction: row;
+            background-color: rgb(146, 176, 196);
+        }
 
-.flex-container > div {  /*div children of the flex container*/
-  background-color: #0eae64; 
-  margin: 10px;  padding: 10px;  font-size: 15px;
-}
+        .flex-container>div {
+            background-color: #0eae64;
+            margin: 10px;
+            padding: 10px;
+            font-size: 15px;
+        }
 
-/* Responsive layout */
-@media (max-width: 600px) { 
-	 .flex-container{
-		 flex-direction:column;
-		 background-color: rgb(32, 133, 77);
-	  }
+        /* Responsive layout */
+        @media (max-width: 600px) {
+            .flex-container {
+                flex-direction: column;
+                background-color: rgb(32, 133, 77);
+            }
+        }
 
-	}
-    #locations{
-        background-color: blue;
-    }
-    #penalty{
-        background-color: aqua;
-    }
-    #help{
-        background-color: beige;
-    }
-</style></head>
+        #locations {
+            background-color: blue;
+        }
 
+        #penalty {
+            background-color: aqua;
+        }
+
+        #help {
+            background-color: beige;
+        }
+    </style>
+</head>
 
 <body>
-	<!--part2-->
     <h1>Find the treasure by Bhuvaneswaridevi</h1>
-    <!-- <div class="flex-container"> -->
-    <div>Click on the locations to search for treasure, beware the traps</div>   
-	<div id="locations">Number of locations checked is zero</div>  
-	<div id="penalty">Penalty is zero</div>
+    <div>Click on the locations to search for treasure, beware the traps</div>
+    <div id="locations">Number of locations checked is zero</div>
+    <div id="penalty">Penalty is zero</div>
     <div>Click for help</div>
-    <div  id="help"> Help report</div>
-    <!-- </div> -->
+    <div id="help">Help report</div>
     <br>
-    <!--part3-->
     <div class="container">
         <div class="row">
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="0" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(0)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="1" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(1)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="2" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(2)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="3" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(3)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="4" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(4)"></div>
         </div>
         <div class="row">
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="5" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(5)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="6" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(6)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="7" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(7)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="8" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(8)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="9" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(9)"></div>
         </div>
-    <div class="row">
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-    </div>
         <div class="row">
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-    </div>
+            <div class="col-md-1"><img src="Location.jpg" id="10" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(10)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="11" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(11)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="12" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(12)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="13" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(13)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="14" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(14)"></div>
+        </div>
         <div class="row">
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        <div class="col-md-1"><img src="Location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-	</div>
+            <div class="col-md-1"><img src="Location.jpg" id="15" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(15)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="16" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(16)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="17" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(17)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="18" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(18)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="19" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(19)"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-1"><img src="Location.jpg" id="20" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(20)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="21" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(21)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="22" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(22)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="23" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(23)"></div>
+            <div class="col-md-1"><img src="Location.jpg" id="24" alt="searchlocation" style="width:100px;height:100px;"
+                    onclick="check(24)"></div>
+        </div>
     </div>
+
+    <script>
+        let ids = [];
+        for (let i = 0; i < 25; i++) {
+            ids[i] = i;
+        }
+
+        let gameOver = false; // Initial game state
+        let checkCount = 0;
+        let penalty = 0;
+        let lastCheck = 0;
+        let treasureLocation = Math.round(Math.random() * 24);
+        let trapLocation = Math.round(Math.random() * 24);
+
+        function check(p) {
+            if (gameOver) {
+                return;
+            }
+            const img_id = ids[p];
+            const tre_loc_img = document.getElementById(img_id);
+            if (p == treasureLocation) {
+                tre_loc_img.src = "Treasure.jpg";
+                gameOver = true;
+                penalty = penalty - 3;
+            } else if (p == trapLocation) {
+                tre_loc_img.src = "Trap.jpg";
+                gameOver = true;
+                penalty = penalty + 4;
+            } else {
+                tre_loc_img.src = "Hat.jpg";
+            }
+            checkCount = checkCount + 1;
+            penalty = penalty + 1;
+            const loc_text = document.getElementById("locations");
+            loc_text.innerHTML = `Number of locations checked is ${checkCount}`;
+            const pen_text = document.getElementById("penalty");
+            pen_text.innerHTML = `Penalty is ${penalty}`;
+            lastCheck = p;
+        }
+
+        function help() {
+            let col = lastCheck % 5;
+            let row = Math.floor(lastCheck / 5);
+
+            let treasureCol = treasureLocation % 5;
+            let treasureRow = Math.floor(treasureLocation / 5);
+
+            let col_diff = Math.abs(col - treasureCol);
+            let row_diff = Math.abs(row - treasureRow);
+
+            let report = "";
+
+            if (((col_diff <= 1) && (row_diff == 0)) || ((col_diff == 0) && (row_diff <= 1))) {
+                report = "Can smell it";
+            } else if (col_diff + row_diff == 2) {
+                report = "Close Matie";
+            } else {
+                report = "Step Faster";
+            }
+            penalty = penalty + 2;
+            const pen_text = document.getElementById("penalty");
+            pen_text.innerHTML = `Penalty is ${penalty}`;
+            const help_text = document.getElementById("help");
+            help_text.innerHTML = `Help report: ${report}`;
+        }
+
+        
+    </script>
 </body>
-</html>	
+</html>
