--- a/pirate.html
+++ b/pirate.html
@@ -183,7 +183,15 @@
             const help_text = document.getElementById("help");
             help_text.innerHTML = `Help report: ${report}`;
         }
-
+        function reset() {
+            checkCount = 0;
+            penalty = 0;
+            treasureLocation = Math.round(Math.random() * 24);
+            trapLocation = Math.round(Math.random() * 24);
+            document.getElementById("locations").innerHTML = `Number of locations checked is ${checkCount}`;
+            document.getElementById("penalty").innerHTML = `Penalty is ${penalty}`;
+            gameOver = false;
+        }
         
     </script>
 </body>
