--- a/pirate.html
+++ b/pirate.html
@@ -118,6 +118,7 @@
                     onclick="check(24)"></div>
         </div>
     </div>
+    <div id="button" type="button" class="btn btn-success" onclick="reset()">New Game</div>
 
     <script>
         let ids = [];
